--- a/Packs/Cyberwatch/Integrations/Cyberwatch/Cyberwatch.yml
+++ b/Packs/Cyberwatch/Integrations/Cyberwatch/Cyberwatch.yml
@@ -35,6 +35,30 @@ configuration:
   section: Connect
   advanced: true
   required: false
+- display: Fetch incidents            
+  name: isFetch                       
+  type: 8                                                 
+- display: Incident type              
+  name: incidentType                  
+  type: 13                                                
+- display: First fetch time
+  name: first_fetch
+  defaultvalue: 3 days
+  type: 0
+  additionalinfo: |
+    Formats acceptés : 3 days, 1 week, 2 months, 2025-05-20T00:00:00Z.
+- display: Fetch Limit
+  name: max_fetch
+  defaultvalue: 50
+  type: 0
+  additionalinfo: Maximum d’incidents que l’on renverra par fetch (≤ 200 recommandé).
+- display: Asset filters (JSON)
+  name: asset_filters
+  type: 12       # long text
+- display: CVE filters (JSON)
+  name: cve_filters
+  defaultvalue: '{"active": true, "ignored": false, "prioritized": true}'
+  type: 12
 description: Get Assets, CVEs, and Security Issues data from Cyberwatch Vulnerability and Compliance Manager.
 display: Cyberwatch
 name: Cyberwatch
@@ -408,7 +432,7 @@ script:
     - contextPath: Cyberwatch.SecurityIssue.editable
       description: Security Issue editability.
       type: boolean
-  isfetch: false
+  isfetch: true
   script: '-'
   type: python
   subtype: python3
